# hands-on-notes

cicd_ansible/: 0_external_vars.yaml  1_playbook.yaml  Dockerfile  docker-compose.yml  inventory.ini  readme.md
cicd_drone/: readme.md
cicd_gitlab/: .gitlab-ci.yml
cicd_sealedSecret/: sealed.md  secret.json
db_cassandra/: example-cassandra.yaml  example.sql
db_vitess/: _db_create_alpha_schema.sql  _db_vschema_alpha_initial.json  _mysqlctl-up.sh  _vttablet-up.sh  env.sh  step.md  step01.sh  step02.sh  step02_check_local.sh  step03.sh  step04.sh  step06.sh  step07.sh  step08.sh
deploy_docker/: Docker.md  applicationExample.md  daemon.json.md  docker-compose-tutor.yml  imgBuildPush.sh  upload_2_private_registry.sh
deploy_dockerOpenssh/: Dockerfile  docker-compose.yml  readme.md
deploy_helm/: helm.md
deploy_k8s/: kube-cks.md  kubeadm.md  kubectl.md
deploy_k8s/for_operator/rust-kube-crd/: Cargo.toml
deploy_k8s/for_operator/rust-kube-crd/src/: main.rs
deploy_k8s/for_operator/rust-kube-rs/: Cargo.toml  ubuntuPreparation.sh
deploy_k8s/for_operator/rust-kube-rs/src/: main.rs
deploy_podman/: podman.md
gateway_envoy/: readme.md
gateway_spiffeSpine/: spiffe-spire.md
messaging_cloudEvent/: jsClientImport.js  jsClientRequire.js  jsClientWebsocket.js  jsServer.js
messaging_grpc/: example.proto
observability_fluentd/: readme.md
observability_grafana/: grafana.md
observability_k8sMonitoring/: k8sMonitoring.md
observability_weaveScope/: scope.yaml  weave.md
serviceMesh_istio/: istio.md
serviceMesh_linkerd/: linkerd.md
(+391 files in other folders)
