[package]
name = "rust-kube-crd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
kube = { version = "0.80.0", features = ["runtime", "derive"] }
kube-derive = { version = "0.80.0", default-features = false } # only needed to opt out of schema
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.14.0", features = ["full"] }
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
validator = { version = "0.16.0", features = ["derive"] }
futures = { version = "0.3.27" }
either = "1.8.1"